# espeak_msvc

./: .gitignore  CMakeLists.txt  compiledict.c  debug.c  debug.h  dictionary.c  espeak.pro  espeak_command.c  espeak_command.h  espeak_libtest.c  event.h  klatt.c  numbers.c  readme.md  readtext.txt  speak_lib.c  speak_lib.h  synth_mbrola.c  synthdata.c  tr_languages.c  voices.c
gcc/: event.c  fifo.c  speech.h  wave.c
msvc/: event.c  fifo.c  speech.h  wave.c
